force-app/main/default/objects/Security__c/Security__c.object-meta.xml
<CustomObject>
    <label>Security</label>
    <nameField>
        <displayFormat>SEC-{00000}</displayFormat>
        <label>Security Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Securities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>