force-app/main/default/objects/Security__c/fields/Holdings__c.field-meta.xml
<CustomField>
    <fullName>Holdings__c</fullName>
    <label>Holdings</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>