force-app/main/default/objects/Security__c/fields/Rollupable_Value__c.field-meta.xml
<CustomField>
    <fullName>Rollupable_Value__c</fullName>
    <label>Rollupable Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>