force-app/main/default/objects/Security__c/fields/Security__c.field-meta.xml
<CustomField>
    <fullName>Security__c</fullName>
    <label>Security</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Funds</relationshipLabel>
    <relationshipName>Securities</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>