force-app/main/default/objects/Security__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Security__c</columns>
    <columns>Fund__c</columns>
    <columns>Holdings__c</columns>
    <columns>Value__c</columns>
    <columns>Recalculate__c</columns>
    <columns>Rollupable_Value__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>